ASSERT when reloading double-linked file #60957

Closed
opened 2019-01-28 21:59:50 +01:00 by Matt Jenkins · 7 comments

System Information
Operating system: Linux Ubuntu 18.04.1-LTS
Graphics card: GTX 970

Blender Version
Broken: 3.80 HEAD
Worked: 2.79b

Short description of error
Reloading a file which is linked from a file which is linked to the current file causes a SIGABRT

Exact steps for others to reproduce the error
One library files with objects with materials assigned to them ("material library")
One library file with objects that links the material library and uses those materials ("object library")
One scene which links the object library and includes duplicates of those objects in the scene

Blender File -> Libraries -> find the material library -> context menu -> reload

Reloading the object library works fine. Reloading the material library causes the SIGABRT

Backtrace

Thread 1 "blender" received signal SIGABRT, Aborted.
__GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
51	../sysdeps/unix/sysv/linux/raise.c: No such file or directory.
(gdb) bt
- 0  0x00007ffff32dde97 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
- 1  0x00007ffff32df801 in __GI_abort () at abort.c:79
- 2  0x00005555570713c3 in lib_relocate_do (bmain=0x7fffafbad808, library=0x7fff9dfa4608, lapp_data=0x7fff8f3fc008, reports=0x7fffa3f7b1c8, do_reload=true) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_files_link.c:696
- 3  0x0000555557071eca in wm_lib_relocate_exec_do (C=0x7fffccf1ca08, op=0x7fff96379248, do_reload=true)
    at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_files_link.c:925
#4  0x0000555557072071 in wm_lib_reload_exec (C=0x7fffccf1ca08, op=0x7fff96379248)
    at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_files_link.c:969
#5  0x0000555557033af3 in wm_operator_invoke (C=0x7fffccf1ca08, ot=0x7fffc89dd6e8, event=0x0, properties=0x7fffffffcd30, reports=0x0, poll_only=false, use_last_properties=true)
    at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:1343
#6  0x00005555570342f7 in wm_operator_call_internal (C=0x7fffccf1ca08, ot=0x7fffc89dd6e8, properties=0x7fffffffcd30, reports=0x0, context=6, poll_only=false, event=0x0)
    at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:1576
- 7  0x00005555570343b4 in WM_operator_name_call_ptr (C=0x7fffccf1ca08, ot=0x7fffc89dd6e8, context=6, properties=0x7fffffffcd30) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:1588
- 8  0x000055555711d4be in lib_relocate (C=0x7fffccf1ca08, te=0x7fffac93dda8, tselem=0x7fffa9ad5c50, ot=0x7fffc89dd6e8, reload=true) at /home/matt/blender/src/blender/source/blender/editors/space_outliner/outliner_edit.c:631
#9  0x000055555711da8a in lib_reload_cb (C=0x7fffccf1ca08, UNUSED_reports=0x7fff95bfd768, UNUSED_scene=0x7fff9c3f4008, te=0x7fffac93dda8, UNUSED_tsep=0x0, tselem=0x7fffa9ad5c50, UNUSED_user_data=0x0)
    at /home/matt/blender/src/blender/source/blender/editors/space_outliner/outliner_edit.c:756
#10 0x0000555557123767 in outliner_do_libdata_operation (C=0x7fffccf1ca08, reports=0x7fff95bfd768, scene=0x7fff9c3f4008, soops=0x7fffa8710d88, lb=0x7fffa8710e58, operation_cb=0x55555711da37 <lib_reload_cb>, user_data=0x0)
    at /home/matt/blender/src/blender/source/blender/editors/space_outliner/outliner_tools.c:303
#11 0x0000555557126300 in outliner_lib_operation_exec (C=0x7fffccf1ca08, op=0x7fff96379608)
    at /home/matt/blender/src/blender/source/blender/editors/space_outliner/outliner_tools.c:1443
#12 0x0000555557050b89 in WM_menu_invoke_ex (C=0x7fffccf1ca08, op=0x7fff96379608, opcontext=1)
    at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_operators.c:742
#13 0x0000555557050cda in WM_menu_invoke (C=0x7fffccf1ca08, op=0x7fff96379608, UNUSED_event=0x7fffc8453d88)
    at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_operators.c:761
#14 0x00005555570339d6 in wm_operator_invoke (C=0x7fffccf1ca08, ot=0x7fffc8ae2b48, event=0x7fffc8453d88, properties=0x7fffffffd7f0, reports=0x0, poll_only=false, use_last_properties=true)
    at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:1333
#15 0x0000555557034191 in wm_operator_call_internal (C=0x7fffccf1ca08, ot=0x7fffc8ae2b48, properties=0x7fffffffd7f0, reports=0x0, context=1, poll_only=false, event=0x7fffc8453d88)
    at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:1540
- 16 0x00005555570343b4 in WM_operator_name_call_ptr (C=0x7fffccf1ca08, ot=0x7fffc8ae2b48, context=1, properties=0x7fffffffd7f0) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:1588
- 17 0x0000555557377c84 in ui_apply_but_funcs_after (C=0x7fffccf1ca08)
    at /home/matt/blender/src/blender/source/blender/editors/interface/interface_handlers.c:776
#18 0x000055555739185b in ui_popup_handler (C=0x7fffccf1ca08, event=0x7fffc8347788, userdata=0x7fff5d7fee88)
    at /home/matt/blender/src/blender/source/blender/editors/interface/interface_handlers.c:9939
#19 0x0000555557031730 in wm_handler_ui_call (C=0x7fffccf1ca08, handler=0x7fff96379608, event=0x7fffc8347788, always_pass=0)
    at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:573
#20 0x000055555703648b in wm_handlers_do_intern (C=0x7fffccf1ca08, event=0x7fffc8347788, handlers=0x7fffa8710720)
    at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:2385
---Type <return> to continue, or q <return> to quit---
#21 0x0000555557036e54 in wm_handlers_do (C=0x7fffccf1ca08, event=0x7fffc8347788, handlers=0x7fffa8710720)
    at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:2618
#22 0x0000555557038208 in wm_event_do_handlers (C=0x7fffccf1ca08)
    at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:3008
#23 0x000055555702cbf3 in WM_main (C=0x7fffccf1ca08)
    at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm.c:425
#24 0x00005555570274d3 in main (argc=1, argv=0x7fffffffdfa8) at /home/matt/blender/src/blender/source/creator/creator.c:520
**System Information** Operating system: Linux Ubuntu 18.04.1-LTS Graphics card: GTX 970 **Blender Version** Broken: 3.80 HEAD Worked: 2.79b **Short description of error** Reloading a file which is linked from a file which is linked to the current file causes a SIGABRT **Exact steps for others to reproduce the error** One library files with objects with materials assigned to them ("material library") One library file with objects that links the material library and uses those materials ("object library") One scene which links the object library and includes duplicates of those objects in the scene Blender File -> Libraries -> find the material library -> context menu -> reload Reloading the object library works fine. Reloading the material library causes the SIGABRT **Backtrace** ``` Thread 1 "blender" received signal SIGABRT, Aborted. __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51 51 ../sysdeps/unix/sysv/linux/raise.c: No such file or directory. (gdb) bt - 0 0x00007ffff32dde97 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51 - 1 0x00007ffff32df801 in __GI_abort () at abort.c:79 - 2 0x00005555570713c3 in lib_relocate_do (bmain=0x7fffafbad808, library=0x7fff9dfa4608, lapp_data=0x7fff8f3fc008, reports=0x7fffa3f7b1c8, do_reload=true) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_files_link.c:696 - 3 0x0000555557071eca in wm_lib_relocate_exec_do (C=0x7fffccf1ca08, op=0x7fff96379248, do_reload=true) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_files_link.c:925 #4 0x0000555557072071 in wm_lib_reload_exec (C=0x7fffccf1ca08, op=0x7fff96379248) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_files_link.c:969 #5 0x0000555557033af3 in wm_operator_invoke (C=0x7fffccf1ca08, ot=0x7fffc89dd6e8, event=0x0, properties=0x7fffffffcd30, reports=0x0, poll_only=false, use_last_properties=true) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:1343 #6 0x00005555570342f7 in wm_operator_call_internal (C=0x7fffccf1ca08, ot=0x7fffc89dd6e8, properties=0x7fffffffcd30, reports=0x0, context=6, poll_only=false, event=0x0) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:1576 - 7 0x00005555570343b4 in WM_operator_name_call_ptr (C=0x7fffccf1ca08, ot=0x7fffc89dd6e8, context=6, properties=0x7fffffffcd30) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:1588 - 8 0x000055555711d4be in lib_relocate (C=0x7fffccf1ca08, te=0x7fffac93dda8, tselem=0x7fffa9ad5c50, ot=0x7fffc89dd6e8, reload=true) at /home/matt/blender/src/blender/source/blender/editors/space_outliner/outliner_edit.c:631 #9 0x000055555711da8a in lib_reload_cb (C=0x7fffccf1ca08, UNUSED_reports=0x7fff95bfd768, UNUSED_scene=0x7fff9c3f4008, te=0x7fffac93dda8, UNUSED_tsep=0x0, tselem=0x7fffa9ad5c50, UNUSED_user_data=0x0) at /home/matt/blender/src/blender/source/blender/editors/space_outliner/outliner_edit.c:756 #10 0x0000555557123767 in outliner_do_libdata_operation (C=0x7fffccf1ca08, reports=0x7fff95bfd768, scene=0x7fff9c3f4008, soops=0x7fffa8710d88, lb=0x7fffa8710e58, operation_cb=0x55555711da37 <lib_reload_cb>, user_data=0x0) at /home/matt/blender/src/blender/source/blender/editors/space_outliner/outliner_tools.c:303 #11 0x0000555557126300 in outliner_lib_operation_exec (C=0x7fffccf1ca08, op=0x7fff96379608) at /home/matt/blender/src/blender/source/blender/editors/space_outliner/outliner_tools.c:1443 #12 0x0000555557050b89 in WM_menu_invoke_ex (C=0x7fffccf1ca08, op=0x7fff96379608, opcontext=1) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_operators.c:742 #13 0x0000555557050cda in WM_menu_invoke (C=0x7fffccf1ca08, op=0x7fff96379608, UNUSED_event=0x7fffc8453d88) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_operators.c:761 #14 0x00005555570339d6 in wm_operator_invoke (C=0x7fffccf1ca08, ot=0x7fffc8ae2b48, event=0x7fffc8453d88, properties=0x7fffffffd7f0, reports=0x0, poll_only=false, use_last_properties=true) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:1333 #15 0x0000555557034191 in wm_operator_call_internal (C=0x7fffccf1ca08, ot=0x7fffc8ae2b48, properties=0x7fffffffd7f0, reports=0x0, context=1, poll_only=false, event=0x7fffc8453d88) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:1540 - 16 0x00005555570343b4 in WM_operator_name_call_ptr (C=0x7fffccf1ca08, ot=0x7fffc8ae2b48, context=1, properties=0x7fffffffd7f0) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:1588 - 17 0x0000555557377c84 in ui_apply_but_funcs_after (C=0x7fffccf1ca08) at /home/matt/blender/src/blender/source/blender/editors/interface/interface_handlers.c:776 #18 0x000055555739185b in ui_popup_handler (C=0x7fffccf1ca08, event=0x7fffc8347788, userdata=0x7fff5d7fee88) at /home/matt/blender/src/blender/source/blender/editors/interface/interface_handlers.c:9939 #19 0x0000555557031730 in wm_handler_ui_call (C=0x7fffccf1ca08, handler=0x7fff96379608, event=0x7fffc8347788, always_pass=0) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:573 #20 0x000055555703648b in wm_handlers_do_intern (C=0x7fffccf1ca08, event=0x7fffc8347788, handlers=0x7fffa8710720) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:2385 ---Type <return> to continue, or q <return> to quit--- #21 0x0000555557036e54 in wm_handlers_do (C=0x7fffccf1ca08, event=0x7fffc8347788, handlers=0x7fffa8710720) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:2618 #22 0x0000555557038208 in wm_event_do_handlers (C=0x7fffccf1ca08) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm_event_system.c:3008 #23 0x000055555702cbf3 in WM_main (C=0x7fffccf1ca08) at /home/matt/blender/src/blender/source/blender/windowmanager/intern/wm.c:425 #24 0x00005555570274d3 in main (argc=1, argv=0x7fffffffdfa8) at /home/matt/blender/src/blender/source/creator/creator.c:520 ```
Author

Added subscriber: @majenko

Added subscriber: @majenko
Author

sigabrt.zip

Ok, steps to reproduce (reliably I hope)

  • Extract those two files
  • Create a new scene
  • File -> Link... -> microcontrollers.blend -> Object -> PIC32MX270F256D-I-ML
  • Duplicate object (Shift-D)

"Blender File" -> /[...]/materials.blend -> Right-click -> Reload

There is no code involved here. Just linked files.

[sigabrt.zip](https://archive.blender.org/developer/F6442246/sigabrt.zip) Ok, steps to reproduce (reliably I hope) - Extract those two files - Create a new scene - File -> Link... -> microcontrollers.blend -> Object -> PIC32MX270F256D-I-ML - Duplicate object (Shift-D) # "Blender File" -> /[...]/materials.blend -> Right-click -> Reload There is no code involved here. Just linked files.
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Bastien Montagne was assigned by Philipp Oeser 2019-01-29 12:47:10 +01:00
Member

release build actually seems fine, but can confirm the assert mentioned above in debug build...

[note: duplication of the object is mandatory, otherwise, no assert happens]

I guess this one is in good hands if @mont29 has a look?
(possibly the assert is harmless?)

release build actually seems fine, but can confirm the assert mentioned above in debug build... [note: duplication of the object is mandatory, otherwise, no assert happens] I guess this one is in good hands if @mont29 has a look? (possibly the assert is harmless?)
Philipp Oeser changed title from SIGABRT when reloading double-linked file to ASSERT when reloading double-linked file 2019-01-29 12:47:25 +01:00

The assert is sort of harmless here, it simply means that material library is not flagged as 'directly linked' properly, when you duplicate the object (since this is making linked object local, so library used by that one become directly linked). Will check on it, but please do not call this 'a crash', crashing on asserts is not a good idea in Blender, we use them a lot a 'strong warning', not necessarily as deadly error.

The assert is sort of harmless here, it simply means that material library is not flagged as 'directly linked' properly, when you duplicate the object (since this is making linked object local, so library used by that one become directly linked). Will check on it, but please do not call this 'a crash', crashing on asserts is not a good idea in Blender, we use them a lot a 'strong warning', not necessarily as deadly error.

This issue was referenced by 534573f6b9

This issue was referenced by 534573f6b9dc5e637bea18de3edcd0f22593666a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60957
No description provided.